--- a/css/loginStyle.css
+++ b/css/loginStyle.css
@@ -19,7 +19,8 @@
 				text-decoration: none;
 				color: white;
 				padding: 5px 20px;
-				border: 1px solid transparent;
+                border: 1px solid transparent;
+                border-radius: 24px;
 				transition: 0.6s ease;
 			}
 			ul li a:hover
@@ -29,7 +30,7 @@
 			}
 		header
 		{
-			background-image:linear-gradient(to right, #b92b27, #1565c0);
+			background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)),url('../image/asset.jpg');
 			height: 100vh;
 			background-size: cover;
 			background-position: center; 
@@ -39,10 +40,15 @@
 {
     max-width: 500px;
     padding: 40px;
-    background: #191919;
+    background: linear-gradient(rgba(0,0,0,0.3),rgba(124, 115, 60, 0.808));
     text-align: center;
     border-radius: 24px;
     transition: 0.25s;
+}
+
+::placeholder
+{
+    color: white;
 }
 
 .box input[type="text"],
@@ -93,7 +99,7 @@
 }
 
 .forgot {
-    color: blue;
+    color: yellowgreen;
 }
 
 .muted
