--- a/css/main.css
+++ b/css/main.css
@@ -13,23 +13,36 @@ header{
 nav{
     width: 100%; height: 15vh;
     background-color: rgba(0,0,0,0.2);
-    color: white; display: flex; justify-content: space-between;
-    align-items: center; text-transform: uppercase;
+    color: white; 
+    display: flex; 
+    justify-content: space-between;
+    align-items: center; 
+    text-transform: uppercase;
 }
 
 nav .logo{
-    width: 25%; text-align: center;
+    width: 25%; 
+    text-align: center;
 }
 
-nav .menu{
-    width: 40%;
-    display: flex; justify-content: space-around;
+nav .menu
+{
+    display: inline;
 }
 
 nav .menu a{
-    width: 25%;
-    text-decoration: none; color: white;
-    font-weight: bold;
+    text-decoration: none;
+	color: white;
+	padding: 5px 20px;
+    border: 1px solid transparent;
+    border-radius: 24px;
+    transition: 0.6s ease;
+}
+
+nav .menu a:hover
+{
+    background-color: #fff;
+	color: #000;
 }
 
 main{
