--- a/css/registerStyle.css
+++ b/css/registerStyle.css
@@ -19,7 +19,8 @@
 				text-decoration: none;
 				color: white;
 				padding: 5px 20px;
-				border: 1px solid transparent;
+                border: 1px solid transparent;
+                border-radius: 24px;
 				transition: 0.6s ease;
 			}
 			ul li a:hover
@@ -29,7 +30,7 @@
 			}
 		header
 		{
-			background-image:linear-gradient(to right, #b92b27, #1565c0);
+			background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.1)),url('../image/assetLogin.jpg');
 			height: 100vh;
 			background-size: cover;
 			background-position: center; 
@@ -39,10 +40,14 @@
 {
     max-width: 500px;
     padding: 40px;
-    background: #191919;
+    background: linear-gradient(rgba(145, 56, 56, 0.808),rgba(0,0,0,0.3));
     text-align: center;
     border-radius: 24px;
     transition: 0.25s;
+}
+::placeholder
+{
+    color: white;
 }
 
 .box input[type="text"],
@@ -57,10 +62,11 @@
     padding: 10px 10px;
     width: 250px;
     outline: none;
-    color: white;
+    color: rgb(255, 255, 255);
     border-radius: 24px;
     transition: 0.25s
 }
+
 
 .box h1 {
     color: white;
@@ -71,7 +77,8 @@
 }
 
 .box input[type="text"]:focus,
-.box input[type="password"]:focus {
+.box input[type="password"]:focus,
+.box input[type="number"]:focus {
     width: 300px;
     border-color: #2ecc71
 }
